// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearPickerInput Component YearPickerInput renders and changes with empty value 1`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input"
          name="NAME"
          placeholder="TESTPLACEHOLDER"
          type="text"
          value="2022"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders and changes without onChange prop 1`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input"
          name="NAME"
          placeholder="TESTPLACEHOLDER"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders and changes without onChange prop 2`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input"
          name="NAME"
          placeholder="TESTPLACEHOLDER"
          type="text"
          value=""
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders handles changes 1`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input"
          name="NAME"
          placeholder="TESTPLACEHOLDER"
          type="text"
          value="1984"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders handles changes 2`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input"
          name="NAME"
          placeholder="TESTPLACEHOLDER"
          type="text"
          value="1984"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders in Error 1`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input input-error"
          name="NAME"
          placeholder="YYYY"
          type="text"
          value="2022"
        />
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`YearPickerInput Component YearPickerInput renders in readOnly, highlighted without portal 1`] = `
<div>
  <div>
    <div
      class="react-datepicker-wrapper"
    >
      <div
        class="react-datepicker__input-container"
      >
        <input
          autocomplete="off"
          class="field input-year-picker-input-read-only field-highlighted"
          name="NAME"
          placeholder="-"
          readonly=""
          type="text"
          value="2022"
        />
      </div>
    </div>
  </div>
</div>
`;
